welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: not found: value d
			setCouleurBrosse (T(d))
                                            ^Array2:23: error: reassignment to val
			decalage = decalage + 1
                                 ^