welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur)
	T(0)=getCouleurSol()
	for(c <- 0 to T.length - 1) {
		T(c) = getCouleurSol()
		if(!estFaceMur) {
			avance()
		}
		else recule(getMondeHauteur - 1)
	}
	
	
	for(c2 <- 0 to getMondeLargeur - 2) {
		gauche()
		avance()
		droite()
		val decalage = litMessage().toInt
		for(c3 <- 0 to getMondeHauteur-1) {
			setCouleurBrosse (T(d))
			baisseBrosse()
			leveBrosse()
			decalage = decalage + 1
			if(!estFaceMur) {
			avance()
			}
		}
		recule(getMondeHauteur - 1)
		
	}
}
